# bcbs239-lakehouse

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: .gitignore  README.md  package.json  pnpm-lock.yaml
dashboard/app/: globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx
dashboard/app/exposures/: page.tsx
dashboard/app/pipeline/: page.tsx
dashboard/app/scorecard/: page.tsx
dashboard/components/: architecture-flow.tsx  drift-table.tsx  layer-counts.tsx  rwa-table.tsx  score-tile.tsx  synthetic-disclaimer.tsx
dashboard/lib/: data.ts
dashboard/lib/data/: snapshot.json
dashboard/scripts/: export_dashboard_data.py
docs/: DEMO-SCRIPT.md  DEPLOY.md  PORTABILITY.md  PRD.md
docs/ADR/: ADR-001-delta-rs-for-library-path.md
notebooks/: 01_bronze.py  02_silver.py  03_gold.py
scripts/: refresh_pipeline.py
src/bcbs239_lakehouse/: __init__.py  cli.py
src/bcbs239_lakehouse/data/: __init__.py  synthetic.py
src/bcbs239_lakehouse/databricks/: __init__.py  cli.py  lakeview.py  unity_catalog.py
src/bcbs239_lakehouse/databricks/dashboards/: dq_scorecard.json
src/bcbs239_lakehouse/lineage/: __init__.py
src/bcbs239_lakehouse/pipeline/: __init__.py  bronze.py  gold.py  silver.py
src/bcbs239_lakehouse/quality/: __init__.py  dimensions.py
tests/: test_cli.py  test_databricks_cli.py  test_databricks_lakeview.py  test_databricks_unity_catalog.py  test_pipeline_bronze.py  test_pipeline_gold.py  test_pipeline_silver.py  test_quality_dimensions.py  test_repo_hygiene.py  test_smoke.py  test_synthetic.py
warehouse/bronze/_ingest_log/: part-00000-ad33435e-b9be-4b0f-9ea6-016a1e6ee690-c000.snappy.parquet  part-00000-b83ab42d-f893-43b0-9fcc-6b72c4d3df7c-c000.snappy.parquet  part-00000-d6bd4f8d-a51e-4153-99d1-d0995dfbb911-c000.snappy.parquet
warehouse/bronze/collateral/: part-00000-da488d92-1066-41f3-a353-2c2a34a1bb03-c000.snappy.parquet
warehouse/bronze/counterparty/: part-00000-7facc08c-438c-44fb-8699-735466ebadc1-c000.snappy.parquet
warehouse/bronze/exposure/: part-00000-c9c102e8-b4da-44fc-9bab-7600aeb62f5b-c000.snappy.parquet
warehouse/gold/fact_dq_scorecard/: part-00000-39847c0e-bdd4-45c7-aea0-8f24ad5f7711-c000.snappy.parquet
warehouse/gold/fact_rwa_aggregation/: part-00000-aa4eb417-4dea-4023-a814-816344ddb2a8-c000.snappy.parquet
warehouse/silver/collateral/: part-00000-7ebbb338-7901-47aa-b159-ae8509baeb61-c000.snappy.parquet
warehouse/silver/counterparty/: part-00000-3ade171f-67be-4b57-9357-29fa9f8bf720-c000.snappy.parquet
warehouse/silver/exposure/: part-00000-c27689c3-638b-41d5-a568-f484987e6e5a-c000.snappy.parquet
