[project]
name = "bcbs239-lakehouse"
version = "0.1.0"
description = "Reference implementation of the BCBS 239 risk-data-aggregation lakehouse pattern on Databricks + Delta Lake + Unity Catalog + dbt-databricks. Portfolio piece."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Pyae Sone Kyaw", email = "pyaesonekyaw101010@gmail.com" }]
keywords = ["bcbs239", "risk-data", "databricks", "delta-lake", "unity-catalog", "dbt", "lakehouse"]

dependencies = [
    # Synthetic data + schemas
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Databricks SDK (UC + Lakeview programmatic access)
    "databricks-sdk>=0.40.0",

    # Local Spark + Delta for tests (matches Databricks runtime 14.x)
    "pyspark>=3.5.0,<4.0.0",
    "delta-spark>=3.2.0",

    # Data utilities
    "pandas>=2.2.0",
    "polars>=1.18.0",

    # DQ
    "great-expectations>=1.3.0",

    # Logging / config
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.9.0",
    "dbt-databricks>=1.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bcbs239_lakehouse"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",        # pycodestyle
    "F",             # pyflakes
    "I",             # isort
    "B",             # bugbear
    "C4",            # comprehensions
    "UP",            # pyupgrade
    "N",             # pep8-naming
    "S",             # bandit
    "T20",           # no print
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length handled by formatter
    "S101",          # asserts allowed in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
"notebooks/**" = ["T201", "E402"]  # notebooks may print + have non-top-level imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["pyspark.*", "delta.*", "great_expectations.*", "databricks.*"]
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = [
    "--strict-markers",
    "--cov=src/bcbs239_lakehouse",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=70",  # Weekend 1 floor; raises to 80% by Weekend 2 ship
]
markers = [
    "smoke: minimal cold-start sanity test (must always pass)",
    "integration: requires Databricks workspace",
    "slow: takes >5s",
]

[tool.coverage.run]
source = ["src/bcbs239_lakehouse"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
